fix add new purchase and add new category button alignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -279,7 +279,11 @@ h1 a:hover {
 
 .nav {
   margin-top: 35px;
-  margin-right: -50px;
+  margin-right: -40px;
+}
+
+.add_new_button {
+  float: right;
 }
 
 .col-md-12 {
